Extracted apiUrl to specific environment configuration